--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -38,7 +38,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-09-28 14:37:50
+// updated on 2017-10-08 11:13:04
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -132,7 +132,6 @@ DOMAIN-SUFFIX,livew.l.qq.com,REJECT
 DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
 DOMAIN-SUFFIX,monitor-uu.play.aiseet.atianqi.com,REJECT
-DOMAIN-SUFFIX,news.l.qq.com,REJECT
 DOMAIN-SUFFIX,news-l.play.aiseet.atianqi.com,REJECT
 DOMAIN-SUFFIX,omgmta1.qq.com,REJECT
 DOMAIN-SUFFIX,otheve.play.aiseet.atianqi.com,REJECT
@@ -872,7 +871,6 @@ DOMAIN-SUFFIX,dm.toutiao.com,REJECT
 DOMAIN-SUFFIX,dsp.toutiao.com,REJECT
 DOMAIN-SUFFIX,nativeapp.toutiao.com,REJECT
 DOMAIN-SUFFIX,partner.toutiao.com,REJECT
-DOMAIN-SUFFIX,s3.bytecdn.cn,REJECT
 DOMAIN-SUFFIX,92x.tumblr.com,REJECT
 DOMAIN-SUFFIX,its-dori.tumblr.com,REJECT
 DOMAIN-SUFFIX,tumblrprobes.cedexis.com,REJECT
@@ -910,7 +908,6 @@ DOMAIN-SUFFIX,aoodoo.feng.com,REJECT
 DOMAIN-SUFFIX,bbsanalytics.weiphone.net,REJECT
 DOMAIN-SUFFIX,fengbuy.com,REJECT
 DOMAIN-SUFFIX,we.tm,REJECT
-DOMAIN-SUFFIX,yes1.feng.com,REJECT
 DOMAIN,wifiapi01.51y5.net,REJECT
 DOMAIN,wifiapi02.51y5.net,REJECT
 DOMAIN-SUFFIX,c.51y5.net,REJECT
@@ -2185,7 +2182,6 @@ DOMAIN-SUFFIX,fjkst.com,REJECT
 DOMAIN-SUFFIX,fjmeyer.com,REJECT
 DOMAIN-SUFFIX,flashtalking.com,REJECT
 DOMAIN-SUFFIX,flowcodeapp.com,REJECT
-DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,fmgoal.com,REJECT
 DOMAIN-SUFFIX,fnkjj.com,REJECT
 DOMAIN-SUFFIX,focusprolight.com,REJECT
@@ -3706,7 +3702,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-09-28 14:37:48
+// updated on 2017-10-08 11:13:03
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -3727,6 +3723,7 @@ DOMAIN-SUFFIX,beeg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,global.bing.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bloombergview.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boysmaster.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bynet.co.il,Proxy,force-remote-dns
 DOMAIN-SUFFIX,carfax.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,casinobellini.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,centauro.com.br,Proxy,force-remote-dns
@@ -3793,6 +3790,7 @@ DOMAIN-SUFFIX,kendatire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,khatrimaza.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kkbox.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,leisurepro.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,lifemiles.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,longtoes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lovetvshow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.m-sport.co.uk,Proxy,force-remote-dns
@@ -3861,6 +3859,7 @@ DOMAIN-SUFFIX,superokayama.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,superpages.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,swagbucks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,switch1.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,t.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tapanwap.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,target.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thebodyshop-usa.com,Proxy,force-remote-dns
@@ -4478,6 +4477,7 @@ DOMAIN-SUFFIX,alliance.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allinfa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alljackpotscasino.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allmovie.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,almasdarnews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alphaporno.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alternate-tools.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alternativeto.net,Proxy,force-remote-dns
@@ -5066,8 +5066,8 @@ DOMAIN-SUFFIX,coolncute.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,corumcollege.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cos-moe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cosplayjav.pl,Proxy,force-remote-dns
-DOMAIN-SUFFIX,couchdbwiki.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cotweet.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,coursehero.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cpj.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cq99.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,crackle.com,Proxy,force-remote-dns
@@ -5357,6 +5357,7 @@ DOMAIN-SUFFIX,epochweekly.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,eporner.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,equinenow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,erabaru.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,eracom.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,eraysoft.com.tr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,erepublik.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,erights.net,Proxy,force-remote-dns
@@ -6324,6 +6325,7 @@ DOMAIN-SUFFIX,keycdn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,khabdha.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,khmusic.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kichiku-doujinko.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kik.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbs.kimy.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kindleren.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.kindleren.com,Proxy,force-remote-dns
@@ -7385,6 +7387,7 @@ DOMAIN-SUFFIX,sesawe.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sesawe.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sethwklein.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,setn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,settv.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,forum.setty.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sevenload.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sex.com,Proxy,force-remote-dns
@@ -7740,6 +7743,7 @@ DOMAIN-SUFFIX,teck.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,teeniefuck.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,teensinasia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,telecomspace.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,telegram.dog,Proxy,force-remote-dns
 DOMAIN-SUFFIX,telegram.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,telegramdownload.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,telegraph.co.uk,Proxy,force-remote-dns
@@ -7909,6 +7913,7 @@ DOMAIN-SUFFIX,toonel.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,top81.ws,Proxy,force-remote-dns
 DOMAIN-SUFFIX,topnews.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,torguard.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,top.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,topshareware.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,topsy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,toptip.ca,Proxy,force-remote-dns
@@ -8382,6 +8387,7 @@ DOMAIN-SUFFIX,whatblocked.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wheatseeds.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wheelockslatin.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whippedass.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,whoer.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whotalking.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whylover.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whyx.org,Proxy,force-remote-dns
@@ -8478,6 +8484,7 @@ DOMAIN-SUFFIX,wuguoguang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wujie.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wujieliulan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wukangrui.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wuw.red,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wwitv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wzyboy.im,Proxy,force-remote-dns
 DOMAIN-SUFFIX,x-berry.com,Proxy,force-remote-dns
