--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -29,7 +29,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-10-08 11:13:04
+// updated on 2017-10-25 19:18:48
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -732,7 +732,6 @@ DOMAIN-SUFFIX,d.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,d3g.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,etg.qq.com,REJECT
-DOMAIN-SUFFIX,gdt.qq.com,REJECT
 DOMAIN-SUFFIX,hm.l.qq.com,REJECT
 DOMAIN-SUFFIX,i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,ios.bugly.qq.com,REJECT
@@ -740,7 +739,6 @@ DOMAIN-SUFFIX,l2.l.qq.com,REJECT
 DOMAIN-SUFFIX,lb.gtimg.com,REJECT
 DOMAIN-SUFFIX,livem.l.qq.com,REJECT
 DOMAIN-SUFFIX,ls.l.qq.com,REJECT
-DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mini2015.qq.com,REJECT
 DOMAIN-SUFFIX,p2.l.qq.com,REJECT
 DOMAIN-SUFFIX,pgdt.gtimg.cn,REJECT
@@ -849,6 +847,8 @@ DOMAIN-SUFFIX,ecpm.tanx.com,REJECT
 DOMAIN-SUFFIX,p.tanx.com,REJECT
 DOMAIN-SUFFIX,pcookie.tanx.com,REJECT
 DOMAIN-SUFFIX,phs.tanx.com,REJECT
+DOMAIN-SUFFIX,applovin.com,REJECT
+DOMAIN-SUFFIX,guangzhuiyuan.com,REJECT
 DOMAIN-SUFFIX,801.tianya.cn,REJECT
 DOMAIN-SUFFIX,803.tianya.cn,REJECT
 DOMAIN-SUFFIX,806.tianya.cn,REJECT
@@ -1598,7 +1598,6 @@ DOMAIN-SUFFIX,appboy.com,REJECT
 DOMAIN-SUFFIX,appdriver.cn,REJECT
 DOMAIN-SUFFIX,apple.www.letv.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
-DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN-SUFFIX,app-measurement.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,aqgyju.cn,REJECT
@@ -1901,7 +1900,6 @@ DOMAIN-SUFFIX,criteo.com,REJECT
 DOMAIN-SUFFIX,crl.microsoft.com,REJECT
 DOMAIN-SUFFIX,crosschannel.com,REJECT
 DOMAIN-SUFFIX,crs.baidu.com,REJECT
-DOMAIN-SUFFIX,crunchyroll.com,REJECT
 DOMAIN-SUFFIX,csad.cc,REJECT
 DOMAIN-SUFFIX,csqiulong.com,REJECT
 DOMAIN-SUFFIX,cstoa.com,REJECT
@@ -2277,7 +2275,6 @@ DOMAIN-SUFFIX,gp.jstv.com,REJECT
 DOMAIN-SUFFIX,gqswg.com,REJECT
 DOMAIN-SUFFIX,greenhouseglobal.cn,REJECT
 DOMAIN-SUFFIX,groupa.onlylady.com,REJECT
-DOMAIN-SUFFIX,growingio.com,REJECT
 DOMAIN-SUFFIX,gs307.com,REJECT
 DOMAIN-SUFFIX,gso0.com,REJECT
 DOMAIN-SUFFIX,gt.yy.com,REJECT
@@ -2374,6 +2371,7 @@ DOMAIN-SUFFIX,hzaibi.com,REJECT
 DOMAIN-SUFFIX,hzhyhm.com,REJECT
 DOMAIN-SUFFIX,i.syasn.com,REJECT
 DOMAIN-SUFFIX,i.zhuoyaju.com,REJECT
+DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
 DOMAIN-SUFFIX,i3818.com,REJECT
 DOMAIN-SUFFIX,i92xue.com,REJECT
 DOMAIN-SUFFIX,iadc.qwapi.com,REJECT
@@ -3005,7 +3003,6 @@ DOMAIN-SUFFIX,rack.bauermedia.co.uk,REJECT
 DOMAIN-SUFFIX,rad.microsoft.com,REJECT
 DOMAIN-SUFFIX,rad.msn.com,REJECT
 DOMAIN-SUFFIX,radar.cedexis.com,REJECT
-DOMAIN-SUFFIX,rbc.cn,REJECT
 DOMAIN-SUFFIX,rbywg.com,REJECT
 DOMAIN-SUFFIX,rdiqt.cn,REJECT
 DOMAIN-SUFFIX,re.taotaosou.com,REJECT
@@ -3548,7 +3545,6 @@ DOMAIN-SUFFIX,xzzyi.com,REJECT
 DOMAIN-SUFFIX,y.damifan.cn,REJECT
 DOMAIN-SUFFIX,yadro.ru,REJECT
 DOMAIN-SUFFIX,yageben.com,REJECT
-DOMAIN-SUFFIX,yandex.ru,REJECT
 DOMAIN-SUFFIX,yandui.com,REJECT
 DOMAIN-SUFFIX,yangdasen.cn,REJECT
 DOMAIN-SUFFIX,yanglaopt.net,REJECT
@@ -3694,7 +3690,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-10-08 11:13:29
+// updated on 2017-10-25 19:18:57
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -3809,6 +3805,7 @@ DOMAIN-SUFFIX,020h.com,ChinaProxy
 DOMAIN-SUFFIX,020icp.com,ChinaProxy
 DOMAIN-SUFFIX,020job.com,ChinaProxy
 DOMAIN-SUFFIX,020vv.com,ChinaProxy
+DOMAIN-SUFFIX,020yhy.com,ChinaProxy
 DOMAIN-SUFFIX,020zp.net,ChinaProxy
 DOMAIN-SUFFIX,021.net,ChinaProxy
 DOMAIN-SUFFIX,0214.com,ChinaProxy
@@ -6957,6 +6954,7 @@ DOMAIN-SUFFIX,51mariadb.com,ChinaProxy
 DOMAIN-SUFFIX,51mdq.com,ChinaProxy
 DOMAIN-SUFFIX,51meishu.com,ChinaProxy
 DOMAIN-SUFFIX,51mike.com,ChinaProxy
+DOMAIN-SUFFIX,51miz.com,ChinaProxy
 DOMAIN-SUFFIX,51mmm.com,ChinaProxy
 DOMAIN-SUFFIX,51mobilejob.com,ChinaProxy
 DOMAIN-SUFFIX,51modo.cc,ChinaProxy
@@ -7925,6 +7923,7 @@ DOMAIN-SUFFIX,6655076.com,ChinaProxy
 DOMAIN-SUFFIX,6661666.net,ChinaProxy
 DOMAIN-SUFFIX,6665.com,ChinaProxy
 DOMAIN-SUFFIX,66667676.com,ChinaProxy
+DOMAIN-SUFFIX,6669667.com,ChinaProxy
 DOMAIN-SUFFIX,666ccc.com,ChinaProxy
 DOMAIN-SUFFIX,666pic.com,ChinaProxy
 DOMAIN-SUFFIX,666wan.com,ChinaProxy
@@ -10687,6 +10686,7 @@ DOMAIN-SUFFIX,archiname.com,ChinaProxy
 DOMAIN-SUFFIX,architbang.com,ChinaProxy
 DOMAIN-SUFFIX,archlinuxcn.org,ChinaProxy
 DOMAIN-SUFFIX,archsummit.com,ChinaProxy
+DOMAIN-SUFFIX,arctime.org,ChinaProxy
 DOMAIN-SUFFIX,ardme.net,ChinaProxy
 DOMAIN-SUFFIX,11.com,ChinaProxy
 DOMAIN-SUFFIX,arefly.com,ChinaProxy
@@ -12157,6 +12157,7 @@ DOMAIN-SUFFIX,bohailife.net,ChinaProxy
 DOMAIN-SUFFIX,bohaishibei.com,ChinaProxy
 DOMAIN-SUFFIX,bohaiyun.com,ChinaProxy
 DOMAIN-SUFFIX,bohutmt.com,ChinaProxy
+DOMAIN-SUFFIX,boip.net,ChinaProxy
 DOMAIN-SUFFIX,bojoy.net,ChinaProxy
 DOMAIN-SUFFIX,boke.com,ChinaProxy
 DOMAIN-SUFFIX,boke112.com,ChinaProxy
@@ -14158,6 +14159,7 @@ DOMAIN-SUFFIX,chrice.net,ChinaProxy
 DOMAIN-SUFFIX,tina.com,ChinaProxy
 DOMAIN-SUFFIX,shop.com,ChinaProxy
 DOMAIN-SUFFIX,chromecj.com,ChinaProxy
+DOMAIN-SUFFIX,chrstatic.com,ChinaProxy
 DOMAIN-SUFFIX,chs.so,ChinaProxy
 DOMAIN-SUFFIX,chshcms.com,ChinaProxy
 DOMAIN-SUFFIX,f.com,ChinaProxy
@@ -15213,6 +15215,7 @@ DOMAIN-SUFFIX,cpc.cc,ChinaProxy
 DOMAIN-SUFFIX,cpcpcp222.com,ChinaProxy
 DOMAIN-SUFFIX,cpcpcp555.com,ChinaProxy
 DOMAIN-SUFFIX,cpcv.cc,ChinaProxy
+DOMAIN-SUFFIX,cpcwe.com,ChinaProxy
 DOMAIN-SUFFIX,cpdyj.com,ChinaProxy
 DOMAIN-SUFFIX,cphoto.net,ChinaProxy
 DOMAIN-SUFFIX,cphoto.org,ChinaProxy
@@ -15592,6 +15595,7 @@ DOMAIN-SUFFIX,cutv.com,ChinaProxy
 DOMAIN-SUFFIX,cuyoo.com,ChinaProxy
 DOMAIN-SUFFIX,cvchina.info,ChinaProxy
 DOMAIN-SUFFIX,cvrobot.net,ChinaProxy
+DOMAIN-SUFFIX,cvz5.com,ChinaProxy
 DOMAIN-SUFFIX,cw100.com,ChinaProxy
 DOMAIN-SUFFIX,cwan.com,ChinaProxy
 DOMAIN-SUFFIX,cwbgj.com,ChinaProxy
@@ -17051,6 +17055,7 @@ DOMAIN-SUFFIX,downkuai.com,ChinaProxy
 DOMAIN-SUFFIX,ssl.xbox,ChinaProxy
 DOMAIN-SUFFIX,download.gfe,ChinaProxy
 DOMAIN-SUFFIX,download.microsoft,ChinaProxy
+DOMAIN-SUFFIX,download.visualstudio,ChinaProxy
 DOMAIN-SUFFIX,download.windowsupdate,ChinaProxy
 DOMAIN-SUFFIX,download.xbox,ChinaProxy
 DOMAIN-SUFFIX,download.xboxlive,ChinaProxy
@@ -17321,6 +17326,7 @@ DOMAIN-SUFFIX,dvmission.com,ChinaProxy
 DOMAIN-SUFFIX,dw.la,ChinaProxy
 DOMAIN-SUFFIX,dw178.com,ChinaProxy
 DOMAIN-SUFFIX,dw188.com,ChinaProxy
+DOMAIN-SUFFIX,dw361.com,ChinaProxy
 DOMAIN-SUFFIX,dwjoy.com,ChinaProxy
 DOMAIN-SUFFIX,dwqcw.com,ChinaProxy
 DOMAIN-SUFFIX,dwrh.net,ChinaProxy
@@ -17402,6 +17408,7 @@ DOMAIN-SUFFIX,dylcw.net,ChinaProxy
 DOMAIN-SUFFIX,dylxx.net,ChinaProxy
 DOMAIN-SUFFIX,dymi.cc,ChinaProxy
 DOMAIN-SUFFIX,dymjl.com,ChinaProxy
+DOMAIN-SUFFIX,dyndes.com,ChinaProxy
 DOMAIN-SUFFIX,dyonr.com,ChinaProxy
 DOMAIN-SUFFIX,dyp2p.com,ChinaProxy
 DOMAIN-SUFFIX,dypf8.com,ChinaProxy
@@ -17751,6 +17758,7 @@ DOMAIN-SUFFIX,ee9r.com,ChinaProxy
 DOMAIN-SUFFIX,eeboard.com,ChinaProxy
 DOMAIN-SUFFIX,eec168.com,ChinaProxy
 DOMAIN-SUFFIX,eechina.com,ChinaProxy
+DOMAIN-SUFFIX,eecn.cc,ChinaProxy
 DOMAIN-SUFFIX,eedns.com,ChinaProxy
 DOMAIN-SUFFIX,eeduol.com,ChinaProxy
 DOMAIN-SUFFIX,eee114.com,ChinaProxy
@@ -18167,6 +18175,7 @@ DOMAIN-SUFFIX,evereasycom.com,ChinaProxy
 DOMAIN-SUFFIX,everet.org,ChinaProxy
 DOMAIN-SUFFIX,evergrande.com,ChinaProxy
 DOMAIN-SUFFIX,everlose.com,ChinaProxy
+DOMAIN-SUFFIX,eversino.com,ChinaProxy
 DOMAIN-SUFFIX,evervc.com,ChinaProxy
 DOMAIN-SUFFIX,everychina.com,ChinaProxy
 DOMAIN-SUFFIX,everyinch.net,ChinaProxy
@@ -19422,6 +19431,7 @@ DOMAIN-SUFFIX,gamerhome.net,ChinaProxy
 DOMAIN-SUFFIX,gamerlol.com,ChinaProxy
 DOMAIN-SUFFIX,gamersky.com,ChinaProxy
 DOMAIN-SUFFIX,games4f.com,ChinaProxy
+DOMAIN-SUFFIX,gamesas.com,ChinaProxy
 DOMAIN-SUFFIX,gamescl.com,ChinaProxy
 DOMAIN-SUFFIX,gameservice.com,ChinaProxy
 DOMAIN-SUFFIX,gamesifu.com,ChinaProxy
@@ -19652,6 +19662,7 @@ DOMAIN-SUFFIX,geeklu.com,ChinaProxy
 DOMAIN-SUFFIX,geekluo.com,ChinaProxy
 DOMAIN-SUFFIX,geekniu.com,ChinaProxy
 DOMAIN-SUFFIX,geekpark.net,ChinaProxy
+DOMAIN-SUFFIX,geekpie.org,ChinaProxy
 DOMAIN-SUFFIX,geeks.vc,ChinaProxy
 DOMAIN-SUFFIX,geeku.net,ChinaProxy
 DOMAIN-SUFFIX,geekwom.com,ChinaProxy
@@ -20498,6 +20509,7 @@ DOMAIN-SUFFIX,gzhmbag.com,ChinaProxy
 DOMAIN-SUFFIX,gzhphb.com,ChinaProxy
 DOMAIN-SUFFIX,gzhtg.com,ChinaProxy
 DOMAIN-SUFFIX,gzhuake.cc,ChinaProxy
+DOMAIN-SUFFIX,gzhzcj.com,ChinaProxy
 DOMAIN-SUFFIX,gzibokan.com,ChinaProxy
 DOMAIN-SUFFIX,gzidc.com,ChinaProxy
 DOMAIN-SUFFIX,gzittc.net,ChinaProxy
@@ -21486,6 +21498,7 @@ DOMAIN-SUFFIX,hitui.com,ChinaProxy
 DOMAIN-SUFFIX,hitutu.com,ChinaProxy
 DOMAIN-SUFFIX,hitv.com,ChinaProxy
 DOMAIN-SUFFIX,hiued.org,ChinaProxy
+DOMAIN-SUFFIX,ss.com,ChinaProxy
 DOMAIN-SUFFIX,hiveview.com,ChinaProxy
 DOMAIN-SUFFIX,hivr.me,ChinaProxy
 DOMAIN-SUFFIX,hiwifi.com,ChinaProxy
@@ -22212,6 +22225,7 @@ DOMAIN-SUFFIX,hujiang.com,ChinaProxy
 DOMAIN-SUFFIX,hujiangxian.com,ChinaProxy
 DOMAIN-SUFFIX,hujuntao.com,ChinaProxy
 DOMAIN-SUFFIX,hukai.me,ChinaProxy
+DOMAIN-SUFFIX,huke88.com,ChinaProxy
 DOMAIN-SUFFIX,hukoushanghai.com,ChinaProxy
 DOMAIN-SUFFIX,huladai.com,ChinaProxy
 DOMAIN-SUFFIX,hulai.com,ChinaProxy
@@ -22972,6 +22986,7 @@ DOMAIN-SUFFIX,ikuyy.com,ChinaProxy
 DOMAIN-SUFFIX,ikxs.org,ChinaProxy
 DOMAIN-SUFFIX,il8r.com,ChinaProxy
 DOMAIN-SUFFIX,ilanni.com,ChinaProxy
+DOMAIN-SUFFIX,ilast.cc,ChinaProxy
 DOMAIN-SUFFIX,ilazycat.com,ChinaProxy
 DOMAIN-SUFFIX,ileci.com,ChinaProxy
 DOMAIN-SUFFIX,ileehoo.com,ChinaProxy
@@ -23759,6 +23774,7 @@ DOMAIN-SUFFIX,world3000.com,ChinaProxy
 DOMAIN-SUFFIX,jarhu.com,ChinaProxy
 DOMAIN-SUFFIX,jaseywang.me,ChinaProxy
 DOMAIN-SUFFIX,jaskni.com,ChinaProxy
+DOMAIN-SUFFIX,jasolar.com,ChinaProxy
 DOMAIN-SUFFIX,z.com,ChinaProxy
 DOMAIN-SUFFIX,jasve.com,ChinaProxy
 DOMAIN-SUFFIX,er.com,ChinaProxy
@@ -24263,6 +24279,7 @@ DOMAIN-SUFFIX,jinjianginns.com,ChinaProxy
 DOMAIN-SUFFIX,jinjie365.com,ChinaProxy
 DOMAIN-SUFFIX,jinkan.org,ChinaProxy
 DOMAIN-SUFFIX,jinke3d.com,ChinaProxy
+DOMAIN-SUFFIX,jinkosolar.com,ChinaProxy
 DOMAIN-SUFFIX,jinku.com,ChinaProxy
 DOMAIN-SUFFIX,jinlianchu.com,ChinaProxy
 DOMAIN-SUFFIX,jinlinghotels.com,ChinaProxy
@@ -25297,6 +25314,7 @@ DOMAIN-SUFFIX,kaoyan.com,ChinaProxy
 DOMAIN-SUFFIX,kaoyan001.com,ChinaProxy
 DOMAIN-SUFFIX,kaoyan1v1.com,ChinaProxy
 DOMAIN-SUFFIX,kapai8.com,ChinaProxy
+DOMAIN-SUFFIX,kappmob.com,ChinaProxy
 DOMAIN-SUFFIX,f.com,ChinaProxy
 DOMAIN-SUFFIX,kaquanbao.com,ChinaProxy
 DOMAIN-SUFFIX,kartlover.com,ChinaProxy
@@ -25362,6 +25380,7 @@ DOMAIN-SUFFIX,kejet.net,ChinaProxy
 DOMAIN-SUFFIX,kejiadz.com,ChinaProxy
 DOMAIN-SUFFIX,kejiansteel.com,ChinaProxy
 DOMAIN-SUFFIX,kejianyi.com,ChinaProxy
+DOMAIN-SUFFIX,kejibear.club,ChinaProxy
 DOMAIN-SUFFIX,kejibeidou.com,ChinaProxy
 DOMAIN-SUFFIX,kejihai.com,ChinaProxy
 DOMAIN-SUFFIX,kejimeixue.com,ChinaProxy
@@ -26064,6 +26083,7 @@ DOMAIN-SUFFIX,lambdacloud.com,ChinaProxy
 DOMAIN-SUFFIX,lameng.net,ChinaProxy
 DOMAIN-SUFFIX,lamian.tv,ChinaProxy
 DOMAIN-SUFFIX,lamiu.com,ChinaProxy
+DOMAIN-SUFFIX,lammek.com,ChinaProxy
 DOMAIN-SUFFIX,lamoart.com,ChinaProxy
 DOMAIN-SUFFIX,lamost.org,ChinaProxy
 DOMAIN-SUFFIX,lampbrother.net,ChinaProxy
@@ -29160,6 +29180,7 @@ DOMAIN-SUFFIX,narutom.com,ChinaProxy
 DOMAIN-SUFFIX,nasboq.com,ChinaProxy
 DOMAIN-SUFFIX,nasgetinfo.com,ChinaProxy
 DOMAIN-SUFFIX,nashangban.com,ChinaProxy
+DOMAIN-SUFFIX,nasiosoft.com,ChinaProxy
 DOMAIN-SUFFIX,nasyun.com,ChinaProxy
 DOMAIN-SUFFIX,museum.net,ChinaProxy
 DOMAIN-SUFFIX,nav80.com,ChinaProxy
@@ -29494,6 +29515,7 @@ DOMAIN-SUFFIX,njhaiwai.com,ChinaProxy
 DOMAIN-SUFFIX,njhengyou.com,ChinaProxy
 DOMAIN-SUFFIX,njiaren.com,ChinaProxy
 DOMAIN-SUFFIX,njibhu.com,ChinaProxy
+DOMAIN-SUFFIX,njjzgg.com,ChinaProxy
 DOMAIN-SUFFIX,njkfcw.com,ChinaProxy
 DOMAIN-SUFFIX,njlzsx.net,ChinaProxy
 DOMAIN-SUFFIX,njmama.com,ChinaProxy
@@ -29839,6 +29861,7 @@ DOMAIN-SUFFIX,okhqb.com,ChinaProxy
 DOMAIN-SUFFIX,okideaad.com,ChinaProxy
 DOMAIN-SUFFIX,okimgs.com,ChinaProxy
 DOMAIN-SUFFIX,okinfo.org,ChinaProxy
+DOMAIN-SUFFIX,okjike.com,ChinaProxy
 DOMAIN-SUFFIX,okjingying.com,ChinaProxy
 DOMAIN-SUFFIX,okjoys.com,ChinaProxy
 DOMAIN-SUFFIX,oklai.name,ChinaProxy
@@ -31504,6 +31527,7 @@ DOMAIN-SUFFIX,qookar.com,ChinaProxy
 DOMAIN-SUFFIX,qosq.com,ChinaProxy
 DOMAIN-SUFFIX,qp46.com,ChinaProxy
 DOMAIN-SUFFIX,qpdiy.com,ChinaProxy
+DOMAIN-SUFFIX,qpgame.com,ChinaProxy
 DOMAIN-SUFFIX,qplus.com,ChinaProxy
 DOMAIN-SUFFIX,qpstar.com,ChinaProxy
 DOMAIN-SUFFIX,qpx.com,ChinaProxy
@@ -31867,6 +31891,7 @@ DOMAIN-SUFFIX,qyous.com,ChinaProxy
 DOMAIN-SUFFIX,qyrb.com,ChinaProxy
 DOMAIN-SUFFIX,qyslxjc.com,ChinaProxy
 DOMAIN-SUFFIX,qysyj.com,ChinaProxy
+DOMAIN-SUFFIX,qyubaba.com,ChinaProxy
 DOMAIN-SUFFIX,qyule.org,ChinaProxy
 DOMAIN-SUFFIX,qyxxpd.com,ChinaProxy
 DOMAIN-SUFFIX,qyzc.net,ChinaProxy
@@ -33408,6 +33433,7 @@ DOMAIN-SUFFIX,shuomingshuku.com,ChinaProxy
 DOMAIN-SUFFIX,shuoping.net,ChinaProxy
 DOMAIN-SUFFIX,shuoqian.net,ChinaProxy
 DOMAIN-SUFFIX,shuosanguo.com,ChinaProxy
+DOMAIN-SUFFIX,shuosc.org,ChinaProxy
 DOMAIN-SUFFIX,shuoshuokong.com,ChinaProxy
 DOMAIN-SUFFIX,shuoshuoxinqing.com,ChinaProxy
 DOMAIN-SUFFIX,shuowan.com,ChinaProxy
@@ -35415,6 +35441,7 @@ DOMAIN-SUFFIX,tkxxd.net,ChinaProxy
 DOMAIN-SUFFIX,vogue.com,ChinaProxy
 DOMAIN-SUFFIX,tl88.net,ChinaProxy
 DOMAIN-SUFFIX,tladyu.com,ChinaProxy
+DOMAIN-SUFFIX,tlanyan.me,ChinaProxy
 DOMAIN-SUFFIX,tlbaby.com,ChinaProxy
 DOMAIN-SUFFIX,tlbbq.com,ChinaProxy
 DOMAIN-SUFFIX,tlby120.com,ChinaProxy
@@ -37693,6 +37720,7 @@ DOMAIN-SUFFIX,wfkouyaji.com,ChinaProxy
 DOMAIN-SUFFIX,wfmhw.net,ChinaProxy
 DOMAIN-SUFFIX,wfun.com,ChinaProxy
 DOMAIN-SUFFIX,wfxspc.com,ChinaProxy
+DOMAIN-SUFFIX,wfyqc.com,ChinaProxy
 DOMAIN-SUFFIX,wgcljc.com,ChinaProxy
 DOMAIN-SUFFIX,wgcss.com,ChinaProxy
 DOMAIN-SUFFIX,wgfcdn.com,ChinaProxy
@@ -38396,6 +38424,7 @@ DOMAIN-SUFFIX,wx6.org,ChinaProxy
 DOMAIN-SUFFIX,wx8s.com,ChinaProxy
 DOMAIN-SUFFIX,wxavu.com,ChinaProxy
 DOMAIN-SUFFIX,wxb.com,ChinaProxy
+DOMAIN-SUFFIX,wxbdfm.com,ChinaProxy
 DOMAIN-SUFFIX,wxbsgc.com,ChinaProxy
 DOMAIN-SUFFIX,wxcha.com,ChinaProxy
 DOMAIN-SUFFIX,wxcsgd.com,ChinaProxy
@@ -38649,6 +38678,7 @@ DOMAIN-SUFFIX,xfplay.com,ChinaProxy
 DOMAIN-SUFFIX,xfpllay.com,ChinaProxy
 DOMAIN-SUFFIX,xfsrrc.net,ChinaProxy
 DOMAIN-SUFFIX,xfsub.com,ChinaProxy
+DOMAIN-SUFFIX,xftnam.com,ChinaProxy
 DOMAIN-SUFFIX,xfwed.com,ChinaProxy
 DOMAIN-SUFFIX,xfzhsf.com,ChinaProxy
 DOMAIN-SUFFIX,xfztc.com,ChinaProxy
@@ -39142,6 +39172,7 @@ DOMAIN-SUFFIX,xinlinghuayuan.com,ChinaProxy
 DOMAIN-SUFFIX,xinlvtu.com,ChinaProxy
 DOMAIN-SUFFIX,xinmanyuan.com,ChinaProxy
 DOMAIN-SUFFIX,xinmima.com,ChinaProxy
+DOMAIN-SUFFIX,xinmt.com,ChinaProxy
 DOMAIN-SUFFIX,xinnet.com,ChinaProxy
 DOMAIN-SUFFIX,xinniangjie.com,ChinaProxy
 DOMAIN-SUFFIX,xinnong.com,ChinaProxy
@@ -39737,6 +39768,7 @@ DOMAIN-SUFFIX,xycaogen.com,ChinaProxy
 DOMAIN-SUFFIX,xycdn.com,ChinaProxy
 DOMAIN-SUFFIX,xychen.me,ChinaProxy
 DOMAIN-SUFFIX,xycq.net,ChinaProxy
+DOMAIN-SUFFIX,xydfn.com,ChinaProxy
 DOMAIN-SUFFIX,xydhl.com,ChinaProxy
 DOMAIN-SUFFIX,xydjp.com,ChinaProxy
 DOMAIN-SUFFIX,xydyrc.com,ChinaProxy
@@ -40133,6 +40165,7 @@ DOMAIN-SUFFIX,yhurl.com,ChinaProxy
 DOMAIN-SUFFIX,yhwsn.com,ChinaProxy
 DOMAIN-SUFFIX,yhxx.com,ChinaProxy
 DOMAIN-SUFFIX,yhy50.com,ChinaProxy
+DOMAIN-SUFFIX,yhy66.com,ChinaProxy
 DOMAIN-SUFFIX,yhyshop.com,ChinaProxy
 DOMAIN-SUFFIX,yhzx.cc,ChinaProxy
 DOMAIN-SUFFIX,jy.com,ChinaProxy
@@ -41477,6 +41510,7 @@ DOMAIN-SUFFIX,zbjwork.com,ChinaProxy
 DOMAIN-SUFFIX,zbkszx.net,ChinaProxy
 DOMAIN-SUFFIX,zbnews.net,ChinaProxy
 DOMAIN-SUFFIX,zbqzy.com,ChinaProxy
+DOMAIN-SUFFIX,zbred.com,ChinaProxy
 DOMAIN-SUFFIX,zbtvart.com,ChinaProxy
 DOMAIN-SUFFIX,zbusa.com,ChinaProxy
 DOMAIN-SUFFIX,zbwbbs.com,ChinaProxy
@@ -42574,6 +42608,7 @@ DOMAIN-SUFFIX,zuber.im,ChinaProxy
 DOMAIN-SUFFIX,zubunet.com,ChinaProxy
 DOMAIN-SUFFIX,zuche.com,ChinaProxy
 DOMAIN-SUFFIX,zuchecdn.com,ChinaProxy
+DOMAIN-SUFFIX,zuciwang.com,ChinaProxy
 DOMAIN-SUFFIX,zudong.com,ChinaProxy
 DOMAIN-SUFFIX,zufang.com,ChinaProxy
 DOMAIN-SUFFIX,zufangbao.com,ChinaProxy
